# Ai_Poly

./: .dockerignore  README.md  docker-compose.yml
golang/: go.mod  main.go
javascript/: package.json
javascript/pages/: index.tsx
julia/: Dockerfile  optimization.jl
python/: Dockerfile  model.py  requirements.txt
r_analytics/: Dockerfile  statistical_analysis.R
rust/: Cargo.toml  Dockerfile
rust/src/: main.rs
