[package]
name = "ai_system_optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"
rand = "0.8"
rayon = "1.7"
crossbeam = "0.8"
parking_lot = "0.12"
metrics = "0.20"
tracing = "0.1"
anyhow = "1.0" 